# name: TestQuery.test_event_property_filter
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 66), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY event ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_event_property_filter.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 66), equals(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), 'test_val3'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY event ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_event_property_filter.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 66), ilike(replaceRegexpAll(JSONExtractRaw(properties, 'path'), '^"|"$', ''), '%/%'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY event ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_event_property_filter_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         mat_key,
         'a%sd',
         concat(event, ' ', mat_key)
  FROM events
  WHERE and(equals(team_id, 67), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY event ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_event_property_filter_materialized.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         mat_key,
         'a%sd',
         concat(event, ' ', mat_key)
  FROM events
  WHERE and(equals(team_id, 67), equals(mat_key, 'test_val3'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY event ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_event_property_filter_materialized.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         mat_key,
         'a%sd',
         concat(event, ' ', mat_key)
  FROM events
  WHERE and(equals(team_id, 67), ilike(mat_path, '%/%'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY event ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_full_hogql_query
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '')
  FROM events
  WHERE equals(team_id, 68)
  ORDER BY timestamp ASC
  LIMIT 100
  '
---
# name: TestQuery.test_full_hogql_query_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         mat_key
  FROM events
  WHERE equals(team_id, 69)
  ORDER BY timestamp ASC
  LIMIT 100
  '
---
# name: TestQuery.test_hogql_property_filter
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 70), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY event ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_hogql_property_filter.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 70), equals('a%sd', 'foo'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY event ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_hogql_property_filter.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 70), equals('a%sd', 'a%sd'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY event ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_hogql_property_filter.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 70), equals(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), 'test_val2'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY event ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_hogql_property_filter_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         mat_key,
         'a%sd',
         concat(event, ' ', mat_key)
  FROM events
  WHERE and(equals(team_id, 71), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY event ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_hogql_property_filter_materialized.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         mat_key,
         'a%sd',
         concat(event, ' ', mat_key)
  FROM events
  WHERE and(equals(team_id, 71), equals('a%sd', 'foo'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY event ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_hogql_property_filter_materialized.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         mat_key,
         'a%sd',
         concat(event, ' ', mat_key)
  FROM events
  WHERE and(equals(team_id, 71), equals('a%sd', 'a%sd'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY event ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_hogql_property_filter_materialized.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         mat_key,
         'a%sd',
         concat(event, ' ', mat_key)
  FROM events
  WHERE and(equals(team_id, 71), equals(mat_key, 'test_val2'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY event ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_person_property_filter
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         events.distinct_id,
         replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''))
  FROM events
  INNER JOIN
    (SELECT argMax(person_distinct_id2.person_id, version) AS person_id,
            distinct_id
     FROM person_distinct_id2
     WHERE equals(team_id, 73)
     GROUP BY distinct_id
     HAVING equals(argMax(is_deleted, version), 0)) AS events__pdi ON equals(events.distinct_id, events__pdi.distinct_id)
  INNER JOIN
    (SELECT argMax(person.properties, version) AS properties,
            id
     FROM person
     WHERE equals(team_id, 73)
     GROUP BY id
     HAVING equals(argMax(is_deleted, version), 0)) AS events__pdi__person ON equals(events__pdi.person_id, events__pdi__person.id)
  WHERE and(equals(team_id, 73), equals(replaceRegexpAll(JSONExtractRaw(events__pdi__person.properties, 'email'), '^"|"$', ''), 'tom@posthog.com'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY event ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_property_filter_aggregations
  '
  /* user_id:0 request:_snapshot_ */
  SELECT replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         count(*)
  FROM events
  WHERE and(equals(team_id, 74), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  GROUP BY replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '')
  ORDER BY count(*) DESC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_property_filter_aggregations.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         count(*)
  FROM events
  WHERE and(equals(team_id, 74), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  GROUP BY replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '')
  HAVING and(greater(count(*), 1))
  ORDER BY count(*) DESC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_property_filter_aggregations_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT mat_key,
         count(*)
  FROM events
  WHERE and(equals(team_id, 75), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  GROUP BY mat_key
  ORDER BY count(*) DESC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_property_filter_aggregations_materialized.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT mat_key,
         count(*)
  FROM events
  WHERE and(equals(team_id, 75), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  GROUP BY mat_key
  HAVING and(greater(count(*), 1))
  ORDER BY count(*) DESC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_select_hogql_expressions
  '
  /* user_id:0 request:_snapshot_ */
  SELECT replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         event,
         distinct_id,
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 76), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_select_hogql_expressions.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT tuple(uuid, event, events.properties, timestamp, team_id, events.distinct_id, elements_chain, events.created_at, events__pdi.person_id, events__pdi__person.created_at, events__pdi__person.properties),
         event
  FROM events
  INNER JOIN
    (SELECT argMax(person_distinct_id2.person_id, version) AS person_id,
            distinct_id
     FROM person_distinct_id2
     WHERE equals(team_id, 76)
     GROUP BY distinct_id
     HAVING equals(argMax(is_deleted, version), 0)) AS events__pdi ON equals(events.distinct_id, events__pdi.distinct_id)
  INNER JOIN
    (SELECT argMax(person.created_at, version) AS created_at,
            argMax(person.properties, version) AS properties,
            id
     FROM person
     WHERE equals(team_id, 76)
     GROUP BY id
     HAVING equals(argMax(is_deleted, version), 0)) AS events__pdi__person ON equals(events__pdi.person_id, events__pdi__person.id)
  WHERE and(equals(team_id, 76), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  ORDER BY tuple(uuid, event, events.properties, timestamp, team_id, events.distinct_id, elements_chain, events.created_at, events__pdi.person_id, events__pdi__person.created_at, events__pdi__person.properties) ASC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_select_hogql_expressions.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE and(equals(team_id, 76), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  GROUP BY event
  ORDER BY count(*) DESC
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_select_hogql_expressions.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE and(equals(team_id, 76), or(equals(event, 'sign up'), like(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), '%val2')), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  GROUP BY event
  ORDER BY count(*) DESC, event ASC
  LIMIT 101
  OFFSET 0
  '
---
